Suggest tuned JVM settings and measure startup time (Phase 5)
Per-instance "Recommended JVM settings" with measurement to back it up:

- Suggestion engine: heap size from mod count (heavy-modpack floor for
  known pack ids), capped against real system RAM (new /proc/meminfo and
  sysctl hw.memsize probes — no system-info crate); GC flags from the
  Java major (probed from a pinned runtime, else the Mojang-required
  major): legacy G1 up to 16, Aikar-style client G1 on 17-20,
  generational ZGC (-XX:+UseZGC -XX:+ZGenerational) on 21-23, plain
  UseZGC on 24+ where generational is the default.
- Nothing is overwritten silently: the dialog shows a token-level
  before/after diff (and a merge view when the instance has custom args
  - only GC/heap flags are replaced, -D/--add-opens/etc. are kept), and
  applying just fills the settings form for the user to save.
- Measurement: each session records time from process spawn to the first
  readiness log marker (sound engine started / world join), stored per
  instance (startup_stats.json, capped, fully local) keyed by a
  fingerprint of the effective JVM settings. The settings tab shows
  "avg startup before: Xs / after: Ys (n sessions)" around a change.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TuduazpF1dByv2EUvTsUzz